--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "funk",
+  "name": "funkjs",
   "version": "0.0.1",
   "description": "A simple functional library",
   "main": "index.js",
@@ -12,7 +12,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/trygvea/funk.git"
+    "url": "https://github.com/trygvea/funkjs.git"
   },
   "babel": {
     "presets": [
